examples/bad/type12.swifty
//return in a procedure
func foo() {
   return 5
}

foo()
